Style : Overflow issue

--- a/style/style.css
+++ b/style/style.css
@@ -54,6 +54,7 @@ body {
 
 }
 .output-area {
+    overflow: scroll;
     height: 15vh;
     width: 60vw;
     padding: .5rem;
